--- a/facter.conf
+++ b/facter.conf
@@ -15,7 +15,6 @@ global : {
 
 cli : {
   debug     : false,
-  trace     : true,
-  verbose   : false,
-  log-level : "warn"
+  trace     : false,
+  verbose   : true,
 }
